# abacad

./: .env.example  .gitignore  .gitmodules  Makefile  SECURITY.md  deploy.sh  install.sh
.github/workflows/: ci.yml  docker.yml  release.yml
android/: .gitignore  README.md  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  rfb_jni.c
design/: README.md  generate.mjs  tokens.json
docs/: abuse.md  blob-urls.md  capabilities.md  humanize.md  incident-response.md  power-lockscreen.md  product.md  screen-recording.md  shared-responsibility.md  ssh.md  transport.md  trust.md
linux/: Makefile  README.md  go.mod  go.sum
linux/cmd/abacad/: connect.go  main.go
linux/internal/agent/: agent.go  blobclient.go  composite.go  dispatcher.go  dispatcher_test.go  params.go  params_test.go  recorder.go  screenshotcache.go  supervisor.go  tree.go  tunnel.go  tunnel_test.go  vnc.go  vnc_test.go  websocket.go
linux/internal/e2e/: e2e_test.go
linux/internal/gui/: app.go  stub.go  theme_gen.go
linux/internal/status/: status.go
linux/internal/version/: version.go
linux/internal/x11/: conn.go  humanize.go  humanize_test.go  input.go  keymap.go  keymap_test.go  screen.go
linux/packaging/: abacad.desktop  abacad.service  build-deb.sh
macos/: AppIcon.icns  Info.plist  Makefile  Package.swift  README.md
macos/Sources/AbacadAgent/: AbacadApp.swift  CommandDispatcher.swift  Composite.swift  InputInjection.swift  Json.swift  KeyMap.swift  Permissions.swift  Prefs.swift  Theme.swift  Tunnel.swift  WebSocketClient.swift
macos/Sources/abacad/: AbacadApp.swift  AccessibilityTree.swift  BlobClient.swift  CommandDispatcher.swift  Connect.swift  Prefs.swift  RelayMark.swift  ScreenCapture.swift  ScreenRecorder.swift  ScreenshotCache.swift  Theme.swift  Tunnel.swift  VNCServer.swift  VncPipe.swift  (+1 more)
macos/Tools/: GenAppIcon.swift
scripts/: gen-manifest.mjs
server/: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  mock-browser.mjs  mock-desktop.mjs  mock-device.mjs  package-lock.json  package.json  run-browser-live.sh  run-browser-test.sh  run-tunnel-test.sh  smoke-browser.mjs  smoke.mjs  ssh-proxy.mjs  test-multi.mjs  test-tunnel.mjs  verify-browser-live.mjs  verify-scope.mjs
server/backend/: .gitignore  go.mod  go.sum
server/docs-site/: .gitignore  astro.config.mjs  package-lock.json  package.json
server/frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
server/src/: device.ts  index.ts  mcp.ts  protocol.ts
windows/: Abacad.csproj  Agent.cs  App.xaml  App.xaml.cs  BlobClient.cs  CommandDispatcher.cs  Composite.cs  Connect.cs  InputInjection.cs  Json.cs  KeyMap.cs  MainWindow.xaml  MainWindow.xaml.cs  Permissions.cs  Prefs.cs  Program.cs  README.md  RelayMark.cs  ScreenCapture.cs  ScreenRecorder.cs  ScreenshotCache.cs  SettingsForm.cs  Theme.cs  Theme.xaml  TrayApp.cs  TrayIcon.cs  Tunnel.cs  UiTree.cs  Uia.cs  VncPipe.cs  VncServer.cs  WebSocketClient.cs  app.manifest
(+189 files in other folders)
